# faas-worker

./: README.md  requirements.txt  setup.cfg  tox.ini
cloudframe/: version.py
cloudframe/cmd/: dbsync.py  master.py  worker.py
cloudframe/common/: db.py  exception.py  http_rpc.py  job.py  rpc.py  utils.py
cloudframe/models/: __init__.py  server.py
cloudframe/protos/: function.proto  function_pb2.py  function_pb2_grpc.py  heartbeat.proto  heartbeat_pb2.py  heartbeat_pb2_grpc.py
cloudframe/resources/v1/: res01.py
cloudframe/server/: function.py  heartbeat.py  server.py
cloudframe/service/: function.py  heartbeat.py
cloudframe/tests/: base.py  test_server.py
