[metadata]
name = cloudframe
summary = Cloud Frame 
description-file =
    README.md
author = cloudken
author-email = cloudken2000@hotmail.com
home-page =
classifier =
    Environment :: Cloud Frame 
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = cloudframe

[entry_points]
console_scripts =
    cloudframe-dbsync = cloudframe.cmd.dbsync:main
    cloudframe-worker = cloudframe.cmd.worker:main

[pbr]
autodoc_index_modules = True


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 1
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = cloudframe/locale
domain = cloudframe

[update_catalog]
domain = cloudframe
output_dir = cloudframe/locale
input_file = cloudframe/locale/cloudframe.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cloudframe/locale/cloudframe.pot

[wheel]
universal = 1
